# MeiliFileFinder

./: Cargo.toml  LICENSE  README.md
doc/: config.toml  proj1-ignore
frontend/: package.json
frontend/src/: App.vue  main.js
src/: config.rs  file_index.rs  indexer.rs  main.rs  scheduler.rs  server.rs
src/tests/: file_index_tests.rs  indexer_tests.rs
