[package]
name = "MeiliFileFinder"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = "0.27.1"
futures = "0.3"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "1.0", features = ["v5"] }
ignore = "0.4"
toml = "*"

[dev-dependencies]
tempfile = "3.5"
