[package]
name = "MeiliFileFinder"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = "0.27"
futures = "0.3"
axum = "0.8"
hyper = "1.6"
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.43", features = ["rt", "macros", "signal"] }
tokio-cron-scheduler = "0.13"
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12", features = ["v5"] }
ignore = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3.16"
