[package]
name = "MeiliFileFinder"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
meilisearch-sdk = "0.27"
futures = "0.3"
axum = "0.8"
hyper = "1.6"
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.43", features = ["rt", "macros", "signal", "process"] }
tokio-cron-scheduler = { version = "0.13", features = ["signal"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12", features = ["v5"] }
ignore = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3.16"
